2006-02-07  Bruno coudoin  <bruno.coudoin@free.fr>

	* src/boards/advanced_colors.c: (add_xml_data): fixed to check properly for long locale (e.g. pt_BR)
	* src/boards/read_colors.c: (add_xml_data), (parse_doc): -
	* src/boards/python/melody.py: added a dialog if run without sound fx activated
	  changed to use the reload icon instead of mouth sign for the repeat.

2006-02-07  Yves Combe  <yves@ycombe.net>

	fix anim api to destroy the item canvas on deactivate.
	fix gnumch to not crash with that (del anim before quit)
	fix anim in awele.

	* src/boards/awele.c: (pause_board), (repeat), (set_level),
	(to_computer), (buttonClick):
	* src/boards/awele_utils.c: (diedOfHunger):
	* src/boards/python/gnumch.py:
	* src/gcompris/anim.c: (gcompris_deactivate_animation):

2006-02-07  Yves Combe,,,  <yves@ycombe.net>

	add Grand slam rule for capture (no capture 
	if that let opponent hungry).
	add correct rule for hunger end of games (untested).

	* src/boards/awele.c: (to_computer):
	* src/boards/awele_utils.c: (moveAwale), (diedOfHunger):
	* src/boards/awele_utils.h:

2006-02-07  Yves Combe  <yves@ycombe.net>

	fix crash with animation on next_level and repeat.
	fix strings i18n. Needs review of strings.

	* src/boards/awele.c: (pause_board), (repeat), (set_level),
	(awele_create_item), (to_computer), (buttonClick):

2006-02-07  Yves Combe  <yves@ycombe.net>

	add animation like in connect4 when computer think.

	* src/boards/awele.c: (pause_board), (start_board), (end_board),
	(awele_next_level), (to_computer), (buttonClick):

2006-02-06  Yves Combe  <yves@ycombe.net>

	clean code from unused fucntion

	* src/boards/awele.c:
	* src/boards/awele.h:

2006-02-06  Yves Combe  <yves@ycombe.net>

	change evaluation fonction usage in awele,
	to make it easier in level 1-4.
	difficulty:
	 - level 1-2 -> random
	 - level 3-4 -> best computer capture, depth 1.
	 - level 5-6 -> best difference in capture, depth 1.
	 - level 7-8 -> best difference in capture, depth 2.